--- a/src/Siamese_network.ipynb
+++ b/src/Siamese_network.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 431,
    "id": "57884a29",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
     "        elif self.similarity=='cosine':\n",
     "            assert len(x0.shape)==2 and len(x1.shape)==2 and len(x2.shape)==2, \"x0 et x1 doivent être des tableux de 2 dimensions\"\n",
     "            \n",
-    "            dist=torch.empty(0,device=x0.devcie)\n",
+    "            dist=torch.empty(0,device=x0.device)\n",
     "            #Sans la boucle il n'est pas ppssible de choisir la dimension sur laquelle \n",
     "            # nous comptons faire le produit scalaire, comme c'est le cas pour la somme ou pour d'autres opérations\n",
     "            #\"Unlike NumPy’s dot, torch.dot intentionally only supports computing the dot product of two 1D \n",
@@ -258,7 +258,8 @@
     "                input1,input2,input3=x0[i],x1[i].T,x2[i].T\n",
     "                norm_pos= torch.norm(input1) * torch.norm(input2)\n",
     "                norm_neg= torch.norm(input1) * torch.norm(input3)\n",
-    "                tensor=torch.tensor( [ (input1 @ input2) / norm_pos - (input1 @ input3) / norm_neg ] ,device=x0.device)\n",
+    "                \n",
+    "                tensor=torch.tensor( [ input1 @ input2 ] ,device=x0.device)/norm_pos + torch.tensor( [ input1 @ input3 ] ,device=x0.device)/norm_neg\n",
     "                dist=torch.cat((dist,tensor),axis=0)\n",
     " \n",
     "        loss = torch.clamp(dist + self.margin, 0)\n",
@@ -1281,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 424,
    "id": "a8778db0",
    "metadata": {},
    "outputs": [],
@@ -1292,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 425,
    "id": "67e5a7d1",
    "metadata": {},
    "outputs": [
@@ -1300,18 +1301,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EPOCHS : 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Loss 1.5825423324713484e-05 - Val Loss  0.0\n",
+      "EPOCHS : 1\n",
+      "Train Loss 0.00020595033915014936 - Val Loss  0.0\n",
       "EPOCHS : 2\n",
-      "Train Loss 3.9971928927116097e-05 - Val Loss  0.0\n",
+      "Train Loss 3.090601006988436e-05 - Val Loss  0.0\n",
       "EPOCHS : 3\n",
-      "Train Loss 6.364774308167398e-06 - Val Loss  0.0\n",
+      "Train Loss 3.1786857289262115e-06 - Val Loss  0.0\n",
       "EPOCHS : 4\n",
       "Train Loss 0.0 - Val Loss  0.0\n",
       "EPOCHS : 5\n",
@@ -1321,54 +1316,25 @@
       "EPOCHS : 7\n",
       "Train Loss 0.0 - Val Loss  0.0\n",
       "EPOCHS : 8\n",
-      "Train Loss 2.6562504936009645e-05 - Val Loss  0.0\n",
+      "Train Loss 9.002005972433835e-06 - Val Loss  0.0\n",
       "EPOCHS : 9\n",
-      "Train Loss 4.028094466775656e-05 - Val Loss  0.0\n",
+      "Train Loss 0.0 - Val Loss  0.0\n",
       "EPOCHS : 10\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 11\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 12\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 13\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 14\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 15\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 16\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 17\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 18\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 19\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 20\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 21\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 22\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 23\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 24\n",
-      "Train Loss 0.0 - Val Loss  0.0\n",
-      "EPOCHS : 25\n"
+      "Train Loss 0.0 - Val Loss  0.0\n"
      ]
     }
    ],
    "source": [
     "similarity=[\"cosine\",\"euclidian\"]\n",
     "#Optimiseur \n",
-    "optimizer=optim.RMSprop(lr=1e-4, params=model_e.parameters()) # Optimiseur\n",
+    "optimizer=optim.Adam(lr=1e-4, params=model_e.parameters()) # Optimiseur\n",
     "\n",
     "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.1)\n",
     "\n",
     "\n",
     "loss_fn=TripletLoss(margin=model_e.getMargin(),similarity=similarity[1]) # La fonction de perte\n",
     "\n",
-    "history=model_e.fit(train_loader,test_loader,optimizer,scheduler,loss_fn,epochs=50) # Entraînement du modèle\n"
+    "history=model_e.fit(train_loader,test_loader,optimizer,scheduler,loss_fn,epochs=10) # Entraînement du modèle\n"
    ]
   },
   {
@@ -1381,21 +1347,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 435,
    "id": "05f97cdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creation de modèle\n",
-    "model_c=Triplet_Siamese(input_size=29,latent_size=10,dropout=0.2,device=\"cuda\",margin=1.0)"
+    "model_c=Triplet_Siamese(input_size=29,latent_size=10,dropout=0.2,device=\"cuda\",margin=0.4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 436,
    "id": "3531f59d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCHS : 1\n",
+      "Train Loss 1.1999902653694152 - Val Loss  1.1999999859833177\n",
+      "EPOCHS : 2\n",
+      "Train Loss 1.199998940229416 - Val Loss  1.2000000494242566\n",
+      "EPOCHS : 3\n",
+      "Train Loss 1.1999997043609618 - Val Loss  1.2000000478968433\n",
+      "EPOCHS : 4\n",
+      "Train Loss 1.1999999177455902 - Val Loss  1.2000000481099706\n",
+      "EPOCHS : 5\n",
+      "Train Loss 1.1999999284744263 - Val Loss  1.200000049459778\n",
+      "EPOCHS : 6\n",
+      "Train Loss 1.1999999284744263 - Val Loss  1.2000000490690443\n",
+      "EPOCHS : 7\n",
+      "Train Loss 1.1999999296665191 - Val Loss  1.2000000480389283\n",
+      "EPOCHS : 8\n",
+      "Train Loss 1.199999930858612 - Val Loss  1.2000000483586195\n",
+      "EPOCHS : 9\n",
+      "Train Loss 1.199999930858612 - Val Loss  1.2000000498860328\n",
+      "EPOCHS : 10\n",
+      "Train Loss 1.19999995470047 - Val Loss  1.2000000480744495\n",
+      "EPOCHS : 11\n",
+      "Train Loss 1.1999999380111694 - Val Loss  1.2000000485362257\n",
+      "EPOCHS : 12\n",
+      "Train Loss 1.199999930858612 - Val Loss  1.2000000479323645\n",
+      "EPOCHS : 13\n",
+      "Train Loss 1.199999965429306 - Val Loss  1.2000000479678858\n",
+      "EPOCHS : 14\n",
+      "Train Loss 1.1999999368190766 - Val Loss  1.2000000505964576\n",
+      "EPOCHS : 15\n",
+      "Train Loss 1.1999999475479126 - Val Loss  1.2000000502412453\n",
+      "EPOCHS : 16\n",
+      "Train Loss 1.1999999356269837 - Val Loss  1.2000000479678858\n",
+      "EPOCHS : 17\n",
+      "Train Loss 1.1999999403953552 - Val Loss  1.200000057096845\n",
+      "EPOCHS : 18\n",
+      "Train Loss 1.1999999356269837 - Val Loss  1.2000000512713613\n",
+      "EPOCHS : 19\n",
+      "Train Loss 1.199999952316284 - Val Loss  1.2000000485362257\n",
+      "EPOCHS : 20\n",
+      "Train Loss 1.1999999368190766 - Val Loss  1.2000000568481963\n"
+     ]
+    }
+   ],
    "source": [
     "similarity=[\"cosine\",\"euclidian\"]\n",
     "#Optimiseur \n",
@@ -1405,7 +1418,7 @@
     "\n",
     "loss_fn=TripletLoss(margin=model_c.getMargin(),similarity=similarity[0]) # La fonction de perte\n",
     "\n",
-    "history=model_c.fit(train_loader,test_loader,optimizer,scheduler,loss_fn,epochs=50) # Entraînement du modèle\n"
+    "history=model_c.fit(train_loader,test_loader,optimizer,scheduler,loss_fn,epochs=20) # Entraînement du modèle\n"
    ]
   },
   {
