--- a/Siamese_network.ipynb
+++ b/Siamese_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 162,
    "id": "c662b53e-e0e1-4f69-adb8-a159f7d83b11",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "from sklearn.metrics import precision_recall_curve\n",
     "from sklearn.metrics import PrecisionRecallDisplay\n",
     "from sklearn.metrics import RocCurveDisplay,roc_curve\n",
+    "import math as m\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 163,
    "id": "9cc24e95-4789-45f1-b4a3-17e92c6e74b8",
    "metadata": {},
    "outputs": [],
@@ -128,64 +129,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "67c71dbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class Custom_Dataset(Dataset):\n",
-    "\n",
-    "#     \"\"\"Cette classe à été créée afin de créer facilement un DataLoader de pytorch\n",
-    "#     \"\"\"\n",
-    "#     def __init__(self, xtest, ytest):\n",
-    "\n",
-    "#         super(Custom_Dataset,self).__init__()\n",
-    "\n",
-    "#         \"\"\"xtest est forme de couple de donnée, de label ytest=0 si les deux données sont toutes normale et ytest=1 si le premier est normal et le second anormale\n",
-    "#         \"\"\"\n",
-    "\n",
-    "#         neg=torch.empty(0)\n",
-    "#         pos=torch.empty(0)\n",
-    "#         for i in range(xtest.size(0)):\n",
-    "#             if ytest[i]==1:\n",
-    "#                 neg=torch.cat((neg,xtest[i:i+1,1,:]),dim=0)\n",
-    "#                 pos=torch.cat((pos,xtest[i:i+1,0,:]),dim=0)\n",
-    "#             else:\n",
-    "#                 pos=torch.cat((pos,xtest[i:i+1,1,:]),dim=0)\n",
-    "#                 pos=torch.cat((pos,xtest[i:i+1,0,:]),dim=0)\n",
-    "#         data=torch.cat((pos,neg),dim=0)\n",
-    "#         pos_label=torch.zeros(pos.size(0))\n",
-    "#         neg_label=torch.ones(neg.size(0))\n",
-    "#         label=torch.cat((pos_label,neg_label))\n",
-    "#         perm=torch.randperm(label.size(0))\n",
-    "#         label=label[perm]\n",
-    "#         data=data[perm]\n",
-    "\n",
-    "#         self.data = data\n",
-    "#         self.targets = label\n",
-    "\n",
-    "\n",
-    "#     def __len__(self):\n",
-    "#         return len(self.targets)\n",
-    "\n",
-    "#     def __getitem__(self, index):\n",
-    "#         return torch.tensor(self.data[index],dtype=torch.float32), torch.tensor(self.targets[index],dtype=torch.float32)\n",
-    "#     def get_labels(self):\n",
-    "#         return self.targets\n",
-    "#     def get_data(self):\n",
-    "#         return self.data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b12a3fb9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "cf792e59",
    "metadata": {},
@@ -226,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 164,
    "id": "ab6fb2d6",
    "metadata": {},
    "outputs": [],
@@ -287,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 165,
    "id": "d5aaeb23-22a9-4f8a-b657-7914e1f2e01b",
    "metadata": {},
    "outputs": [],
@@ -322,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 166,
    "id": "975c9f6e-2d7c-4386-8706-042b5acf2eff",
    "metadata": {},
    "outputs": [],
@@ -459,218 +402,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a1b597f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dah=pd.read_csv(\"/home/dah/anomalie_detection/anomalie_detection/data/creditcard.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3912940d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = ContrastiveDataset(file_path=\"/home/dah/anomalie_detection/anomalie_detection/data/creditcard.csv\",scaler=MinMaxScaler())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3f22da80",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.float32"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ne=dataset.get_neg_data()\n",
-    "tens=dataset.get_pos_data()\n",
-    "ne.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "23ff9d52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([283])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ne.sum(dim=1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "965c21ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([283, 29])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tens=dataset.get_pos_data()\n",
-    "tens.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f753df5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx,yy=dataset.get_train_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "bedcdd37",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.float32"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yy.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8979a93a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.float32"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xx.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6a28cf88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([160178])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yy.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "a8bf2d56",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xx.size(0)/yy.size(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "60a4b68b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loader=DataLoader(dataset=tens,batch_size=100)\n",
-    "batch=next(iter(loader))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2ae1ea90",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([100, 29])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7f55e561-7f32-41a5-88f2-1d008b9f5ddf",
    "metadata": {},
@@ -682,32 +413,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 167,
    "id": "b15cbce9-1d22-4703-84cd-5db8817a9721",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Backbone(nn.Module):\n",
     "\n",
-    "    def __init__(self,input_size: int, latent_size: int,dropout: float) -> None:\n",
+    "    def __init__(self,input_size: int, dropout: float) -> None:\n",
     "\n",
     "        super(Backbone,self).__init__()\n",
+    "        # latent_size=10\n",
+    "        latent=m.ceil(input_size/6)\n",
+    "        self.latent_size=latent +5 \n",
     "        \n",
-    "        self.fc1=nn.Linear(in_features=input_size,out_features=25)\n",
-    "        self.residual1=nn.Linear(in_features=input_size,out_features=20)\n",
-    "        self.layer_norm1=nn.LayerNorm(25)\n",
+    "        self.fc1=nn.Linear(in_features=input_size,out_features=latent*5)\n",
+    "        self.residual1=nn.Linear(in_features=input_size,out_features=latent*4)\n",
+    "        self.layer_norm1=nn.LayerNorm(latent*5)\n",
     "        self.relu1=nn.ReLU()\n",
     "        self.dropout1=nn.Dropout(dropout)\n",
-    "        self.fc2=nn.Linear(in_features=25,out_features=20)\n",
-    "        self.layer_norm2=nn.LayerNorm(20)\n",
+    "        self.fc2=nn.Linear(in_features=latent*5,out_features=latent*4)\n",
+    "        self.layer_norm2=nn.LayerNorm(latent*4)\n",
     "        self.relu2=nn.ReLU()\n",
-    "        self.residual2=nn.Linear(in_features=20,out_features=latent_size)\n",
-    "        self.fc3=nn.Linear(in_features=20,out_features=15)\n",
-    "        self.layer_norm3=nn.LayerNorm(15)\n",
+    "        self.residual2=nn.Linear(in_features=latent*4,out_features=self.latent_size)\n",
+    "        self.fc3=nn.Linear(in_features=latent*4,out_features=latent*3)\n",
+    "        self.layer_norm3=nn.LayerNorm(latent*3)\n",
     "        self.relu3=nn.ReLU()\n",
     "        self.dropout2=nn.Dropout(dropout)\n",
-    "        self.fc4=nn.Linear(in_features=15,out_features=latent_size)\n",
-    "        self.fc5=nn.Linear(in_features=latent_size,out_features=latent_size)\n",
+    "        self.fc4=nn.Linear(in_features=latent*3,out_features=self.latent_size)\n",
+    "        self.fc5=nn.Linear(in_features=self.latent_size,out_features=self.latent_size)\n",
     "\n",
     "    def forward(self,inputs: Tensor) -> Tensor:\n",
     "        \n",
@@ -743,21 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 168,
    "id": "3906a9f8-6db0-4df1-b7b1-76e615a5a4ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Twins_Siamese(nn.Module):\n",
     "\n",
-    "    def __init__(self,input_size: int,latent_size: int,contamination: float=0.02,dropout: float=0.1,device: str=\"cuda\",margin=0.1) -> None:\n",
+    "    def __init__(self,input_size: int, contamination: float=0.02,dropout: float=0.1,device: str=\"cuda\",margin=0.1) -> None:\n",
     "\n",
     "        super(Twins_Siamese,self).__init__()\n",
     "        \n",
     "    \n",
-    "        self.backbone=Backbone(input_size=input_size, latent_size = latent_size,dropout=dropout)\n",
+    "        self.backbone=Backbone(input_size=input_size,dropout=dropout)\n",
     "        \n",
-    "        self.latent_size=latent_size\n",
+    "        self.latent_size=self.backbone.latent_size \n",
     "        self.offset=contamination\n",
     "        self.margin=margin\n",
     "        self.epoch=1\n",
@@ -861,26 +595,26 @@
     "        n=len(validation_loader)*validation_loader.batch_size\n",
     "        return running_loss/n, 100*accuracy_score/n\n",
     "\n",
-    "    def predict(self, dataloader: DataLoader):\n",
-    "        self.eval()\n",
-    "        loss_fn=ContrastiveLoss(self.margin)\n",
-    "        predicted_labels=torch.empty(0)\n",
-    "        true_labels=torch.empty(0)\n",
+    "    # def predict(self, dataloader: DataLoader):\n",
+    "    #     self.eval()\n",
+    "    #     loss_fn=ContrastiveLoss(self.margin)\n",
+    "    #     predicted_labels=torch.empty(0)\n",
+    "    #     true_labels=torch.empty(0)\n",
     "\n",
-    "        with torch.no_grad() :\n",
+    "    #     with torch.no_grad() :\n",
     "    \n",
-    "            for batch in dataloader:\n",
+    "    #         for batch in dataloader:\n",
     "\n",
-    "                data,target=batch[0],batch[1].to(self.device)\n",
-    "                input1,input2=data[:,0,:].to(self.device),data[:,1,:].to(self.device)\n",
-    "                out1,out2=self.forward(input1,input2)\n",
+    "    #             data,target=batch[0],batch[1].to(self.device)\n",
+    "    #             input1,input2=data[:,0,:].to(self.device),data[:,1,:].to(self.device)\n",
+    "    #             out1,out2=self.forward(input1,input2)\n",
     "\n",
-    "                _,dist=loss_fn(out1,out2,target)\n",
-    "                y_pred=torch.where(dist > 0, torch.tensor(0),torch.tensor(1))\n",
-    "                predicted_labels=torch.cat((predicted_labels,y_pred.cpu()),dim=0)\n",
-    "                true_labels=torch.cat((true_labels,target.cpu()),dim=0)\n",
+    "    #             _,dist=loss_fn(out1,out2,target)\n",
+    "    #             y_pred=torch.where(dist > 0, torch.tensor(0),torch.tensor(1))\n",
+    "    #             predicted_labels=torch.cat((predicted_labels,y_pred.cpu()),dim=0)\n",
+    "    #             true_labels=torch.cat((true_labels,target.cpu()),dim=0)\n",
     "\n",
-    "        return pd.Series(predicted_labels),pd.Series(true_labels)\n",
+    "    #     return pd.Series(predicted_labels),pd.Series(true_labels)\n",
     "\n",
     "    def compute_centre_de_classe(self, pos_loader,neg_loader):\n",
     "        om_pos, om_neg=torch.zeros(self.latent_size, device=self.device),torch.zeros(self.latent_size, device=self.device)\n",
@@ -989,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 169,
    "id": "b7c321d9",
    "metadata": {},
    "outputs": [],
@@ -1020,48 +754,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "1ab2bf99",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([283, 29])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_neg.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "8e179197",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([283, 29])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_pos.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ab5293fc",
    "metadata": {},
@@ -1071,19 +763,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 170,
    "id": "b0e63da5",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creation de modèle\n",
     "torch.manual_seed(42)\n",
-    "model_eucl=Twins_Siamese(input_size=29,latent_size=10,contamination=0.02,dropout=0.2,device=\"cpu\",margin=1.0)"
+    "model_eucl=Twins_Siamese(input_size=29,contamination=0.02,dropout=0.2,device=\"cpu\",margin=1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 171,
    "id": "d1c20c6c-762f-4ce2-804e-fd2bf8ebba11",
    "metadata": {},
    "outputs": [
@@ -1092,14 +784,6 @@
      "output_type": "stream",
      "text": [
       "EPOCHS : 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dah/miniconda3/lib/python3.11/site-packages/torch/autograd/__init__.py:200: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "  Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n"
      ]
     },
     {
@@ -1138,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 172,
    "id": "ebac93f6",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 173,
    "id": "f7ada4a9",
    "metadata": {},
    "outputs": [
@@ -1159,7 +843,7 @@
        "        -0.6579, -0.2293], grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 174,
    "id": "565b9828",
    "metadata": {},
    "outputs": [
@@ -1181,7 +865,7 @@
        "        -0.0179,  0.6071], grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 175,
    "id": "7da598b0",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 176,
    "id": "b538da03",
    "metadata": {},
    "outputs": [
